@@ -7,20 +7,28 @@
 # https://www.sphinx-doc.org/en/master/usage/configuration.html#project-information
 
 project = 'MACS3'
-copyright = '2024, Tao Liu, Philippa Doherty'
+copyright = '2025, Tao Liu, Philippa Doherty'
 author = 'Tao Liu, Philippa Doherty'
-release = '3.0.1'
+release = '3.0.4'
 
 # -- General configuration ---------------------------------------------------
 # https://www.sphinx-doc.org/en/master/usage/configuration.html#general-configuration
 
 extensions = [
     'myst_parser',
-    #'sphinx.ext.autodoc',
+    'sphinx.ext.autodoc',
+    "sphinx.ext.autosummary",
+    "sphinx.ext.napoleon",
+    "sphinx_autodoc_typehints",
     #'sphinx.ext.viewcode',
     'sphinx.ext.mathjax',
     'sphinx.ext.githubpages'
     ]
+
+autosummary_generate = True
+
+autodoc_mock_imports = ["numpy", "scipy", "cykhash", "cython",
+                        "scikit-learn", "hmmlearn"]
 
 myst_enable_extensions = [
     "dollarmath",
